--- a/2-01〜03_JSファイルの読み込み、コンソール、アラート/index.html
+++ b/2-01〜03_JSファイルの読み込み、コンソール、アラート/index.html
@@ -3,16 +3,16 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>3-02_let-const</title>
-<link href="../../_common/images/favicon.ico" rel="shortcut icon">
+<title>2-02_tag</title>
+<link href="../_common/images/favicon.ico" rel="shortcut icon">
 <link href="https://fonts.googleapis.com/css?family=M+PLUS+1p:400,500" rel="stylesheet">
-<link href="../../_common/css/style.css" rel="stylesheet">
+<link href="../_common/css/style.css" rel="stylesheet">
 </head>
 <body>
 <header>
 <div class="container">
-<h1>入力内容に応じて動作を変更する</h1>
-<h2>保存された内容で動作を切り替える</h2>
+<h1>JavaScriptはどこに書く？</h1>
+<h2>HTMLにJavaScriptを直接記述する</h2>
 </div><!-- /.container -->
 </header>
 <main>
@@ -27,13 +27,11 @@
 <p>JavaScript Samples</p>
 </div><!-- /.container -->
 </footer>
+<script src='script.js'></script>
 <script>
 'use strict';
-
-const answer = window.prompt('ヘルプを見ますか？');
-if(answer === 'yes') {
-    window.alert('タップでジャンプ、障害物をよけます。');
-}
+console.log('よく柿食う客だ');
+window.alert('アプリの連携が完了しました。')
 </script>
 </body>
 </html>
