--- a/4-01_input/step1/index.html
+++ b/4-01_input/step1/index.html
@@ -30,11 +30,8 @@
 </div><!-- /.container -->
 </footer>
 <script>
-'use strict';
+    `use strict`;
 
-document.getElementById('form').onsubmit = function() {
-    console.log('クリックされました');
-};
 </script>
 </body>
 </html>
