--- a/3-04_comparison/index.html
+++ b/3-04_comparison/index.html
@@ -4,9 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>3-04_comparison</title>
-<link href="../../_common/images/favicon.ico" rel="shortcut icon">
+<link href="../_common/images/favicon.ico" rel="shortcut icon">
 <link href="https://fonts.googleapis.com/css?family=M+PLUS+1p:400,500" rel="stylesheet">
-<link href="../../_common/css/style.css" rel="stylesheet">
+<link href="../_common/css/style.css" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -28,21 +28,22 @@
 </div><!-- /.container -->
 </footer>
 <script>
-'use strict';
+'use strict'
 
-const number = Math.floor(Math.random() * 6);
-const answer = parseInt(window.prompt('数当てゲーム。0〜5の数字を入力してね。'));
+const nunber = Math.floor(Math.random() * 6);
+const answer = parseInt(window.prompt('数当てゲーム。0〜5の数字を入力してください'));
+
 let message;
-if(answer === number) {
-    message = 'あたり！';
-} else if(answer < number) {
-    message = '残念でした！もっと大きい';
-} else if(answer > number) {
-    message = '残念でした！もっと小さい';
-} else {
-    message = '0〜5の数字を入力してね。';
+if(answer===nunber){
+    message = 'あたり'
+}else if(answer<nunber){
+    message = '残念!もっと大きいです。'
+}else if(answer>nunber){
+    message = '残念!もっと小さいです。'
+}else{
+    message = '数字を入力してください。'
 }
-window.alert(message);
+console.log(message)
 </script>
 </body>
 </html>
