--- a/3-05_logical/index.html
+++ b/3-05_logical/index.html
@@ -3,22 +3,22 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>3-06_while</title>
-<link href="../../_common/images/favicon.ico" rel="shortcut icon">
+<title>3-05_logical</title>
+<link href="../_common/images/favicon.ico" rel="shortcut icon">
 <link href="https://fonts.googleapis.com/css?family=M+PLUS+1p:400,500" rel="stylesheet">
-<link href="../../_common/css/style.css" rel="stylesheet">
+<link href="../_common/css/style.css" rel="stylesheet">
 </head>
 <body>
 <header>
 <div class="container">
-<h1>1枚、2枚、3枚…と出力する</h1>
-<h2>繰り返しを試してみよう</h2>
+<h1>時間で異なるメッセージを表示する</h1>
+<h2>2つ以上の条件式で1つの条件を作る</h2>
 </div><!-- /.container -->
 </header>
 <main>
 <div class="container">
 <section>
-    <p>コンソールを開きます。</p>
+    
 </section>
 </div><!-- /.container -->
 </main>
@@ -28,12 +28,23 @@
 </div><!-- /.container -->
 </footer>
 <script>
-'use strict';
+'use strict'
+
+const hour = new Date().getHours();
+
+if(hour >= 19 && hour < 21 ){
+    window.alert('30%FF');
+}else if(hour === 9 || hour === 15){
+    window.alert('1個おまけ');
+}else{
+    window.alert('特になし');
+}
+
 
 let i = 1;
-while(i <= 10) {
+while(i <= 10){
     console.log(i);
-    i = i + 1;
+    i = i +1;
 }
 </script>
 </body>
