--- a/3-07_enemy_attack/index.html
+++ b/3-07_enemy_attack/index.html
@@ -4,9 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>3-07_monster</title>
-<link href="../../_common/images/favicon.ico" rel="shortcut icon">
+<link href="../_common/images/favicon.ico" rel="shortcut icon">
 <link href="https://fonts.googleapis.com/css?family=M+PLUS+1p:400,500" rel="stylesheet">
-<link href="../../_common/css/style.css" rel="stylesheet">
+<link href="../_common/css/style.css" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -28,17 +28,18 @@
 </div><!-- /.container -->
 </footer>
 <script>
-'use strict';
+'use strict'
 
 let enemy = 100;
-
-window.alert('戦闘スタート！');
-while(enemy > 0) {
+let count = 0;
+window.alert('戦闘スタート')
+while(enemy > 0){
     const attack = Math.floor(Math.random() * 30) + 1;
-    console.log('モンスターに' + attack + 'のダメージ！');
+    console.log('モンスターに' + attack + 'のダメージ');
     enemy -= attack;
+    count += 1;
 }
-console.log(attack);
+console.log(count + '回目でモンスターを倒した');
 </script>
 </body>
 </html>
