--- a/3-11_オブジェクト、キー、ハッシュ/index.html
+++ b/3-11_オブジェクト、キー、ハッシュ/index.html
@@ -4,9 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>3-11_object</title>
-<link href="../../_common/images/favicon.ico" rel="shortcut icon">
+<link href="../_common/images/favicon.ico" rel="shortcut icon">
 <link href="https://fonts.googleapis.com/css?family=M+PLUS+1p:400,500" rel="stylesheet">
-<link href="../../_common/css/style.css" rel="stylesheet">
+<link href="../_common/css/style.css" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -18,6 +18,13 @@
 <main>
 <div class="container">
 <section>
+<table>
+  <tr>
+    <td id='title'></td>
+    <td id='price'></td>
+    <td id='stock'></td>
+  </tr>
+</table>
 
 </section>
 </div><!-- /.container -->
@@ -30,9 +37,23 @@
 <script>
 'use strict';
 
-let jsbook = {title: 'JavaScript入門', price: 2500, stock: 3};
+let jsbook = {title: 'JavaScript入門',price: 2500,stock: 3};
 console.log(jsbook);
+console.log(jsbook.title);
+console.log(jsbook['price'])
+jsbook.stock = 10;
+console.log(jsbook['stock'])
 
+for (let p in jsbook) {
+  console.log(p + `=` + jsbook[p]);
+}
+
+document.getElementById('title').textContent=jsbook['title'];
+document.getElementById('price').textContent=`${jsbook.price} 円`;
+document.getElementById('stock').textContent=jsbook['stock'];
+
+const li = `<td>${jsbook.title}</td>`;
+document.getElementById('title').insertAdjacentHTML('beforebegin',li)
 /*
 step1の作業中に追加するプログラム
 
