--- a/4-01_input/index.html
+++ b/4-01_input/index.html
@@ -4,9 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>4-01_input</title>
-<link rel="shortcut icon" href="../../_common/images/favicon.ico">
+<link rel="shortcut icon" href="../_common/images/favicon.ico">
 <link href="https://fonts.googleapis.com/css?family=M+PLUS+1p:400,500" rel="stylesheet">
-<link href="../../_common/css/style.css" rel="stylesheet">
+<link href="../_common/css/style.css" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -18,9 +18,12 @@
 <main>
 <div class="container">
 <section>
+
     <form action="#" id="form">
+        <input type="text" name="word">
         <input type="submit" value="検索">
     </form>
+    <p id='output'></p>
 </section>
 </div><!-- /.container -->
 </main>
@@ -30,7 +33,14 @@
 </div><!-- /.container -->
 </footer>
 <script>
-    `use strict`;
+    'use strict';
+
+    document.getElementById('form').onsubmit = function(event){
+        event.preventDefault();
+        const search = document.getElementById('form').word.value;
+        document.getElementById('output').textContent = `「${search}」の検索中...`;
+        console.log('クリックされました');
+    };
 
 </script>
 </body>
