--- a/5-01_countdown/extra/index.html
+++ b/5-01_countdown/extra/index.html
@@ -18,7 +18,10 @@
 <main>
 <div class="container">
 <section>
-    <p>いまから<span id="timer"></span>以内に注文すると50%オフ！</p>
+    <!-- <p>いまから<span id="timer"></span>以内に注文すると50%オフ！</p> -->
+    <h2><span>知ってましたか?</span><br>
+        2025年大阪万博開催まで</h2>
+    <p class='timer'>あと<span id='day'></span>日<span id='hour'></span>時間<span id='min'></span>分<span id='sec'></span>秒</p>
 </section>
 </div><!-- /.container -->
 </main>
@@ -34,8 +37,7 @@ function countdown(due) {
     const now = new Date();
 
     const rest = due.getTime() - now.getTime();
-    //const sec = Math.floor(rest / 1000) % 60;
-    const sec = rest / 1000 % 60;
+    const sec = Math.floor(rest / 1000) % 60;
     const min = Math.floor(rest / 1000 / 60) % 60;
     const hours = Math.floor(rest / 1000 / 60 / 60) % 24;
     const days = Math.floor(rest / 1000 / 60 / 60 / 24);
@@ -44,15 +46,34 @@ function countdown(due) {
     return count;
 }
 
-let goal = new Date();
-goal.setHours(23);
-goal.setMinutes(59);
-goal.setSeconds(59);
+// let goal = new Date();
+// goal.setHours(23);
+// goal.setMinutes(59);
+// goal.setSeconds(59);
+const goal = new Date(2025,4,3);
 
 console.log(countdown(goal));
-const counter = countdown(goal);
-const time = `${counter[1]}時間${counter[2]}分${counter[3]}秒`;
-document.getElementById('timer').textContent = time;
+
+// function recalc() {
+//     const counter = countdown(goal);
+//     const time = `${counter[1]}時間${counter[2]}分${counter[3]}秒`;
+//     document.getElementById('timer').textContent = time;
+//     refresh();
+// }
+
+function recalc() {
+    const counter = countdown(goal);
+    document.getElementById('day').textContent  = counter[0];
+    document.getElementById('hour').textContent = counter[1];
+    document.getElementById('min').textContent  = String(counter[2]).padStart(2,'0');
+    document.getElementById('sec').textContent  = String(counter[3]).padStart(2,'0');
+    refresh();
+}
+
+function refresh() {
+    setTimeout(recalc,1000);
+}
+recalc();
 </script>
 </body>
 </html>
