--- a/5-04_image/index.html
+++ b/5-04_image/index.html
@@ -4,9 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>5-04_image</title>
-<link href="../../_common/images/favicon.ico" rel="shortcut icon">
+<link href="../_common/images/favicon.ico" rel="shortcut icon">
 <link href="https://fonts.googleapis.com/css?family=M+PLUS+1p:400,500" rel="stylesheet">
-<link href="../../_common/css/style.css" rel="stylesheet">
+<link href="../_common/css/style.css" rel="stylesheet">
 <style>
 section img {
     max-width: 100%;
@@ -64,11 +64,14 @@ li:last-of-type {
 'use strict';
 
 const thumbs = document.querySelectorAll('.thumb');
-thumbs.forEach(function(item, index) {
+console.log(thumbs);
+thumbs.forEach(function(item,index){
     item.onclick = function() {
-        console.log(this.dataset.image);
+        document.getElementById('bigimg').src = this.dataset.image;
+        // console.log(this.dataset.image);
     }
 });
+
 </script>
 </body>
 </html>
