--- a/6-02_drawer/index.html
+++ b/6-02_drawer/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>6-02_drawer</title>
 <link href="https://fonts.googleapis.com/css?family=M+PLUS+1p:400,500" rel="stylesheet">
-<link href="../../_common/css/style.css" rel="stylesheet">
+<link href="../_common/css/style.css" rel="stylesheet">
 <!-- <link href="css/special.css" rel="stylesheet"> -->
 <link href="css/special.css" rel="stylesheet">
 </head>
@@ -70,7 +70,7 @@
     </ul>
 </nav>
 
-<script src="../../_common/scripts/jquery-3.4.1.min.js"></script>
+<script src="../_common/scripts/jquery-3.4.1.min.js"></script>
 <script>
     'use strict';
 
