--- a/7-02_api/extra/index.html
+++ b/7-02_api/extra/index.html
@@ -19,13 +19,12 @@
 <main>
 <div class="container">
 <section>
-    <h3 id="place"></h3>
-    <div  id="now">
-        <div id="weather">
+    <h3 id='place'></h3>
+    <div id='now'>
+        <div id='weather'>
         </div>
     </div>
-    <table id="forecast">
-    </table>
+    <table id='forecast'></table>
 </section>
 </div><!-- /.container -->
 </main>
@@ -34,7 +33,8 @@
 <p>JavaScript Samples</p>
 </div><!-- /.container -->
 </footer>
-<script src="../../_common/scripts/jquery-3.4.1.min.js"></script>
-<script src="script.js"></script>
+
+<script src="../../common/script/jquery-3.4.1.min.js"></script>
+<script src='script.js'></script>
 </body>
 </html>
